// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RangeSlider component should be defined and renders correctly (snapshot) 1`] = `
<DocumentFragment>
  <div
    aria-disabled="false"
    class="input-range"
  >
    <span
      class="input-range__label input-range__label--min"
    >
      <span
        class="input-range__label-container"
      >
        0
      </span>
    </span>
    <div
      class="input-range__track input-range__track--background"
    >
      <div
        class="input-range__track input-range__track--active"
        style="left: 0%; width: 60%;"
      />
      <span
        class="input-range__slider-container"
        style="position: absolute; left: 60%;"
      >
        <span
          class="input-range__label input-range__label--value"
        >
          <span
            class="input-range__label-container"
          >
            12
          </span>
        </span>
        <div
          aria-valuemax="20"
          aria-valuemin="0"
          aria-valuenow="12"
          class="input-range__slider"
          draggable="false"
          role="slider"
          tabindex="0"
        />
      </span>
    </div>
    <span
      class="input-range__label input-range__label--max"
    >
      <span
        class="input-range__label-container"
      >
        20
      </span>
    </span>
  </div>
</DocumentFragment>
`;

exports[`RangeSlider component should display the current value as a label 1`] = `
<DocumentFragment>
  <div
    aria-disabled="false"
    class="input-range"
  >
    <span
      class="input-range__label input-range__label--min"
    >
      <span
        class="input-range__label-container"
      >
        0
      </span>
    </span>
    <div
      class="input-range__track input-range__track--background"
    >
      <div
        class="input-range__track input-range__track--active"
        style="left: 10%; width: 40%;"
      />
      <span
        class="input-range__slider-container"
        style="position: absolute; left: 10%;"
      >
        <span
          class="input-range__label input-range__label--value"
        >
          <span
            class="input-range__label-container"
          >
            2
          </span>
        </span>
        <div
          aria-valuemax="10"
          aria-valuemin="0"
          aria-valuenow="2"
          class="input-range__slider"
          draggable="false"
          role="slider"
          tabindex="0"
        />
      </span>
      <span
        class="input-range__slider-container"
        style="position: absolute; left: 50%;"
      >
        <span
          class="input-range__label input-range__label--value"
        >
          <span
            class="input-range__label-container"
          >
            10
          </span>
        </span>
        <div
          aria-valuemax="20"
          aria-valuemin="2"
          aria-valuenow="10"
          class="input-range__slider"
          draggable="false"
          role="slider"
          tabindex="0"
        />
      </span>
    </div>
    <span
      class="input-range__label input-range__label--max"
    >
      <span
        class="input-range__label-container"
      >
        20
      </span>
    </span>
  </div>
</DocumentFragment>
`;
